# ctags-indexing-mcp

./: .gitignore  INSTALLATION.md  LICENSE  README.md  pyproject.toml
src/ctags_indexing_mcp/: analyzer.py  config.py  editor.py  indexer.py  server.py
