[project]
name = "ctags-indexing-mcp"
version = "0.1.0"
description = "MCP server that builds cscope/ctags indexes for C/C++/Python projects and wires them into vim/neovim"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Junho Lee", email = "junho.lee@mangoboost.io" },
]
keywords = ["mcp", "cscope", "ctags", "vim", "neovim", "code-navigation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "mcp>=1.2.0",
]

[project.urls]
Homepage = "https://github.com/tot0rokr/ctags-indexing-mcp"
Repository = "https://github.com/tot0rokr/ctags-indexing-mcp"
Issues = "https://github.com/tot0rokr/ctags-indexing-mcp/issues"

[project.scripts]
ctags-indexing-mcp = "ctags_indexing_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ctags_indexing_mcp"]
